# emcp

./: .gitignore  .mcp.json  CLAUDE.md  CONJECTURES.md  Makefile  README.org  pyproject.toml  spec.org
.cprr/: conjectures.json
.github/workflows/: lint.yml  test.yml
docs/: audit-emcp-stdio.md  emcp-stdio-api.org  emcp-stdio.org  mcp-protocol-compliance.md  meta-prompt-v0.md  meta-prompt-v1.md  session-2026-03-17.md  test-strategy-800-tools.org
docs/conjectures/: c-001-research.md  c-008-research.md  c-010-version-compatibility.md
docs/contracts/: daemon-data-layer.md  dispatch.md  integration-tests.md  io-layer.md  tool-collection.md
docs/creative/: banner-prompts.org  resize-banners.py
docs/data-layer/: chaos-test-report.md  emcp-data-buffer-insert.md  emcp-data-buffer-list.md  emcp-data-eval.md  emcp-data-find-file.md  emcp-data-org-capture.md  emcp-data-org-headings.md  emcp-data-org-set-todo.md  emcp-data-org-table.md  system-monitor.md
docs/diagrams/: conjecture-lifecycle.md  mcp-sequence.md  pipeline-dag.md  project-arc.md
docs/marketing/: positioning.md
docs/reference/: batch-mode.md  coding-system-basics.md  creating-strings.md  parsing-json.md  symbol-components.md  (+1 more)
lisp/: org-lint-batch.el
src/: dispatch.py  emcp-stdio.el  introspect.el  server.py
tests/: test-emcp-stdio.el  test-org-lint.sh  test-tier1-smoke.el  test_daemon_layer.sh  test_dispatch.py  test_dispatch.sh  test_dispatch_live.py  test_emcp_stdio_integration.sh  test_io_layer.el  test_io_layer.sh  test_server_live.py  test_sexp_construction.el  test_tool_collection.sh
(+23 files in other folders)
