[project]
name = "emacs-mcp-maximalist"
version = "0.1.0"
description = "Every text-consuming function in Emacs, as an MCP tool"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
emacs-mcp-core = "server:main_core"
emacs-mcp-maximalist = "server:main_maximalist"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
